# bevy_vrma

./: Cargo.toml  README.md  rustfmt.toml
examples/: simple.rs  spring_bone.rs  vrma.rs
src/: error.rs  lib.rs  macros.rs  system_param.rs  vrm.rs  vrma.rs
src/system_param/: cameras.rs  child_searcher.rs  vrm_animation_players.rs
src/vrm/: expressions.rs  extensions.rs  humanoid_bone.rs  loader.rs  spawn.rs  spring_bone.rs
src/vrm/extensions/: vrmc_spring_bone.rs  vrmc_vrm.rs
src/vrm/spring_bone/: attach.rs  registry.rs  update.rs
src/vrma/: animation.rs  extensions.rs  loader.rs  retarget.rs  spawn.rs
src/vrma/animation/: play.rs  player.rs  setup.rs
src/vrma/retarget/: bone.rs  expressions.rs
