[package]
name = "bevy_vrma"
version = "0.1.0"
edition = "2021"
authors = ["notelm <elmprograminfo@gmail.com>"]
repository = "https://github.com/not-elm/desktop_homunculus"
keywords = ["bevy", "game"]
categories = ["games"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.15", features = ["serialize"] }
serde = "1"
serde_json = "1"
anyhow = "1"

[dev-dependencies]
bevy-inspector-egui = "0.30.0"

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

#[lints.rust]
#missing_docs = "warn"